Fix rendering issue in App.jsx

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://giovannad13.github.io/React-Food-Delivery",
+  "homepage": "https://github.com/giovannad13/React-Food-Delivery.git",
   "name": "frontend",
   "private": true,
   "version": "0.0.0",
